<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pure2D Demo</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>

    <!-- display objects -->
    <string name="display_objects">Display Objects</string>
    <string name="hello_display_object">Hello Display Object!</string>
    <string name="multiple_objects">Multiple Objects</string>
    <string name="still_objects">Still Objects</string>
    <string name="jumping_objects">Jumping Objects</string>
    <string name="bouncing_objects">Bouncing Objects</string>
    <string name="sprite">Sprite</string>
    <string name="frame_buffer">Frame Buffer</string>
    <string name="lwf_character">LWF Character</string>
    <string name="lwf_cinematic">LWF Cinematic</string>

    <!-- display groups -->
    <string name="containers">Containers</string>
    <string name="display_groups">Display Groups</string>
    <string name="vertical_group">Vertical Group</string>
    <string name="horizontal_group">Horizontal Group</string>

    <!-- camera -->
    <string name="camera">Camera</string>
    <string name="hello_camera">Hello Camera!</string>

    <!-- particles -->
    <string name="simple_particles">Simple Particles</string>
    <string name="simple_smoke">Simple Smoke</string>
    <string name="motion_trails">Motion Trails</string>
    <string name="dynamic_emitters">Dynamic Emitters</string>
    <string name="random_1">Random Set #1</string>
    <string name="random_2">Random Set #2</string>

    <!-- mw particles -->
    <string name="modern_war">Modern War</string>
    <string name="mw_explosions">Explosions</string>
    <string name="mw_units">Units</string>
    <string name="explosion">Explosion</string>
    <string name="black_explosion">Black Explosion</string>
    <string name="explosion_combo">Explosion Combo</string>
    <string name="gunshots">Gunshots</string>
    <string name="tank_fire">Tank Fire</string>
    <string name="smoke_puff">Smoke Puff</string>
    <string name="abrams">Abrams</string>
    <string name="leopard">Leopard</string>
    <string name="m2bradley">M2Bradley</string>
    <string name="humvee">Humvee</string>
    <string name="ground_units">Ground Units</string>
    <string name="sea_units">Sea Units</string>
    <string name="air_units">Air Units</string>
    <string name="f15">F15</string>
    <string name="stealth_bomber">Stealth Bomber</string>
    <string name="b52">B52</string>
    <string name="rah">RAH</string>
    <string name="harrier">Harrier</string>
    <string name="v22">V22</string>
    <string name="submarine">Submarine</string>
    <string name="frigate">Frigate</string>
    <string name="aircraft_carrier">Aifcraft Carrier</string>

    <!-- textures -->
    <string name="textures">Textures</string>
    <string name="hello_texture">Hello Texture!</string>
    <string name="multiple_texture">Multiple Textures</string>
    <string name="blending">Blending</string>
    <string name="masking">Masking</string>
    <string name="zeus">Zeus</string>
    <string name="rock_checker">Rock Checker</string>
    <string name="checker">Checker</string>

    <!-- physics -->
    <string name="physics">Physics</string>
    <string name="hello_physics">Hello Physics!</string>

    <!-- effects -->
    <string name="effects">Effects</string>
    <string name="sparks">Sparks</string>

    <!-- textures -->
    <string name="animations">Animations</string>
    <string name="texture_atlas">Texture Atlas</string>
    <string name="repeating">Repeating</string>
    <string name="repeat">Repeat</string>
    <string name="vertical_wheel">Vertical Wheel</string>
    <string name="horizontal_wheel">Horizontal Wheel</string>
    <string name="atlas_generator">Atlas Generator</string>
    <string name="image_sequence">Image Sequence</string>
    <string name="slot_machine">Slot Machine</string>
    <string name="casino">Casino</string>
    <string name="show_atlas">Show Atlas</string>
    <string name="tween_animations">Tween\nAnimations</string>
    <string name="linear">Linear</string>
    <string name="accelerate">Accelerate</string>
    <string name="decelerate">Decelerate</string>
    <string name="bounce">Bounce</string>
    <string name="none">None</string>
    <string name="circling">Circling</string>
    <string name="no_looping">No looping</string>
    <string name="accelerate_decelerate">Accelerate-Decelerate</string>
    <string name="hello_text">Hello Text</string>
    <string name="text">Text</string>
    <string name="repeating_texture">Repeating Texture</string>
    <string name="repeat_x">Repeat X</string>
    <string name="repeat_y">Repeat Y</string>
    <string name="loaders">Loaders</string>
    <string name="loader_service">Loader Service</string>
    <string name="start_loading">Start Loading</string>
    <string name="loading">Loading...</string>
    <string name="skeleton_animation">Skeleton\nAnimation</string>
    <string name="skeleton_animation_cache">Skeleton\nAnimation Cache</string>
    <string name="buffers">Buffers</string>
    <string name="stencil_buffer">Stencil Buffer</string>
    <string name="horizontal_wheel_3d">Horizontal Wheel 3D</string>
    <string name="vertical_wheel_3d">Vertical Wheel 3D</string>
    <string name="perspective_camera">Perspective Camera</string>
    <string name="simple_3d">Simple 3D</string>
    <string name="_3d_rotation">3D Rotation</string>
    <string name="reverse">Reverse</string>
    <string name="once">Once</string>
    <string name="json_atlas">JSON Atlas</string>
    <string name="coin_explosion">Coin Explosion</string>
    <string name="trajectory_animation">Trajectory\nAnimation</string>
    <string name="bezier_animation">Bezier\nAnimation</string>
    <string name="path_animation">Path\nAnimation</string>
    <string name="motion_trail_shape">Motion Trail Shape</string>
    <string name="wave_animation">Wave\nAnimation</string>
    <string name="motion_trail">Motion Trail</string>
    <string name="trail">Trail</string>
    <string name="debug">Debug</string>
    <string name="async_loader">Async Loader</string>
    <string name="parallel">Parallel</string>
    <string name="sequence">Sequence</string>
    <string name="parallel_animations">Parallel\nAnimations</string>
    <string name="nova_particle_system">Nova System</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="background">Background</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="gray">Gray</string>
    <string name="_9_patch_scale">9-Patch Scale</string>
    <string name="ui_components">UI Components</string>
    <string name="button">Button</string>
    <string name="lists">Lists</string>
    <string name="test">Test</string>
    <string name="tornado_animation">Tornado Animation</string>
    <string name="whirl_animation">Whirl Animation</string>
    <string name="code">Code</string>
    <string name="code_off">Code\nOff</string>
    <string name="code_on">Code\nOn</string>
    <string name="perspective_projection">Perspective Projection</string>
    <string name="cycle">Cycle</string>
    <string name="overshoot">Overshoot</string>
    <string name="anticipate_overshoot">Anticipate Overshoot</string>
    <string name="anticipate">Anticipate</string>
    <string name="motion_trail_dots">Motion Trail Dots</string>
    <string name="motion_trail_plot">Motion Trail Plot</string>
    <string name="bounds_wireframes">Bounds &amp; Wireframes</string>
    <string name="bitmap_font">Bitmap Font</string>
    <string name="cache">Cache</string>
    <string name="alt_charset">Alternate Charset</string>

    <string-array name="korean_sayings">
        <item>음악이 있는 곳엔\n악이 있을 수 없다</item>
        <item>친구란 다 사람의\n신체에 사는 하나의\n영혼이다</item>
        <item>첫사랑이 아름다울 수\n있는 이유는 이루어지지\n않아서기 때문이다</item>
        <item>견디기 힘든 고통이란\n것은 견딜 수 없는\n고통의 반대말이다</item>
        <item>사막이 아름다운 것은\n어딘가에 샘을 숨기고\n있기 때문이다</item>
    </string-array>

    <string name="korean_bitmap_font">Korean Bitmap Font</string>
    <string name="grid_group">Grid Group</string>
    <string name="flip_orientation">Flip Orientation</string>
    <string name="url_texture">URL Texture</string>
    <string name="astar">Astar</string>
    <string name="show_off">Show Off!</string>
    <string name="rect_grid">Rect Grid</string>
    <string name="hex_grid">Hex Grid</string>
    <string name="grid_astar">Grid &amp; Astar</string>
    <string name="source">Source</string>
    <string name="fps">FPS</string>
    <string name="multi_atlases">Multi Atlases</string>
    <string name="pui_layouts">PUI Layouts</string>
    <string name="pui_xml_layouts">PUI XML Layouts</string>
    <string name="scroll_groups">Scroll Groups</string>

    <!-- charater sets -->
    <string name="charset_basic_latin">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!</string>
    <string name="uni_groups">Uni Groups</string>
    <string name="uni_clips">Uni Clips</string>
    <string name="uni_motion_trail_shape">Uni Motion Trail Shape</string>
    <string name="uni_motion_trail_plot">Uni Motion Trail Plot</string>
    <string name="texture_packer">Texture Packer</string>

</resources>