<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <Button
        android:id="@+id/btn_hello_texture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/hello_texture" />

    <Button
        android:id="@+id/btn_repeating_texture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/repeating_texture" />

    <Button
        android:id="@+id/btn_multiple_texture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/multiple_texture" />

    <Button
        android:id="@+id/btn_masking"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/masking" />

    <Button
        android:id="@+id/btn_hello_atlas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/texture_atlas" />

    <Button
        android:id="@+id/btn_frame_buffer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/frame_buffer" />

    <Button
        android:id="@+id/btn_image_sequence"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/image_sequence" />

</LinearLayout>