<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <Button
        android:id="@+id/btn_hello_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/hello_text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_bitmap_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/bitmap_font" />

        <Button
            android:id="@+id/btn_alternate_charset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/alt_charset" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sprite_9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/_9_patch_scale" />

    <Button
        android:id="@+id/btn_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/button" />

    <Button
        android:id="@+id/btn_vwheel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/vertical_wheel" />

    <Button
        android:id="@+id/btn_hwheel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/horizontal_wheel" />

    <Button
        android:id="@+id/btn_lists"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/lists" />

</LinearLayout>