<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_display_objects"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/display_objects" />

        <Button
            android:id="@+id/btn_containers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/containers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_textures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/textures" />

        <Button
            android:id="@+id/btn_buffers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/buffers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ui"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/ui_components" />

        <Button
            android:id="@+id/btn_pui_layouts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/pui_layouts" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/camera" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_nova_system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/nova_particle_system" />

        <Button
            android:id="@+id/btn_particles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/simple_particles" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_animations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/animations" />

        <Button
            android:id="@+id/btn_effects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/effects" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_physics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/physics" />

        <Button
            android:id="@+id/btn_astar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickButton"
            android:text="@string/grid_astar" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_3d"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/simple_3d" />

    <Button
        android:id="@+id/btn_loaders"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/loaders" />

</LinearLayout>