<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <Button
        android:id="@+id/btn_hello_display_object"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/hello_display_object" />

    <Button
        android:id="@+id/btn_multiple_objects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/multiple_objects" />

    <Button
        android:id="@+id/btn_jumping_objects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/jumping_objects" />

    <Button
        android:id="@+id/btn_bouncing_objects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/bouncing_objects" />

    <Button
        android:id="@+id/btn_lwf_character"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/lwf_character" />

    <Button
        android:id="@+id/btn_lwf_cinematic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/lwf_cinematic" />

</LinearLayout>
