<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RadioGroup
        android:id="@+id/radio_group_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#33000000"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background" />

        <RadioButton
            android:id="@+id/radio_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClickRadio"
            android:text="@string/black" />

        <RadioButton
            android:id="@+id/radio_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadio"
            android:text="@string/gray" />

        <RadioButton
            android:id="@+id/radio_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/white" />

        <RadioButton
            android:id="@+id/radio_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/radio_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/green" />

        <RadioButton
            android:id="@+id/radio_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/blue" />
    </RadioGroup>

</merge>